--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,15 @@ requires-python = ">=3.13"
 dependencies = [
     "mypy>=1.14.1",
     "posit-sdk>=0.7.0",
-    "pytest>=8.3.4",
+]
+
+[tool.pytest.ini_options]
+pythonpath = [
+  "src"
+]
+
+[dependency-groups]
+dev = [
     "ruff>=0.9.3",
+    "pytest>=8.3.4",
 ]
